--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "inngest": "inngest-cli dev -u http://localhost:3000/api/inngest"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.22.0",
+    "@clerk/themes": "^2.2.50",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -21,11 +26,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.2",
+    "inngest": "^3.39.2",
+    "inngest-cli": "^1.8.0",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "pg": "^8.16.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
